Refactor API to EmojiRéso network
